--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = rweather/Crypto@^0.4.0
+lib_deps = 
+	rweather/Crypto@^0.4.0
+	xreef/EMailSender@^2.4.3
