--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,9 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
+monitor_speed=115200
 lib_deps = 
 	rweather/Crypto@^0.4.0
 	xreef/EMailSender@^2.4.3
 	chris--a/Keypad@^3.1.1
+	adafruit/Adafruit MPU6050@^2.2.0
